# Helpdesk

./: PasswordFilterProxyModel.cpp  PasswordRecord.h  PasswordRepository.cpp  mainwindow.h
Kreshchenko10-main/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Kreshchenko11-main/: CMakeLists.txt  mainwindow.h  ticketdialog.cpp  ticketdialog.h
Kreshchenko12-master/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ticket.h  tickettablemodel.cpp  tickettablemodel.h
Kreshchenko13-main/: .gitignore  CMakeLists.txt  Request.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  requestdialog.h  requestdialog.ui  requesttablemodel.h
Kreshchenko14-main/: .gitignore  CMakeLists.txt  csvticketrepository.cpp  csvticketrepository.h  mainwindow.cpp  mainwindow.h  requestentry.h  requesttablemodel.cpp
Kreshchenko15-main/: .gitignore  CMakeLists.txt  mainwindow.cpp  ticketfilterproxymodel.cpp  ticketfilterproxymodel.h  tickettablemodel.h
Kreshchenko16-1/: .gitignore  mainwindow.cpp  mainwindow.h  mainwindow.ui
Kreshchenko17/: .gitignore  CMakeLists.txt  databasemanager.cpp  databasemanager.h  mainwindow.cpp  mainwindow.ui  vaultrecord.h  vaultrepository.cpp  vaultrepository.h
Kreshchenko17/Kreshchenko11-main/: .gitignore  mainwindow.cpp  mainwindow.ui  ticketdialog.ui
Kreshchenko17/Kreshchenko13-main/: requestdialog.cpp  requesttablemodel.cpp
Kreshchenko17/Kreshchenko14-main/: requesttablemodel.h
Kreshchenko17/Kreshchenko15-main/: mainwindow.h  ticket.h  tickettablemodel.cpp
Kreshchenko17/Kreshchenko16/: CMakeLists.txt
Kreshchenko18/: CMakeLists.txt  PasswordFilterProxyModel.h  PasswordRepository.h  PasswordTableModel.cpp  PasswordTableModel.h  mainwindow.cpp
Kreshchenko19/: CMakeLists.txt  PasswordFilterProxyModel.cpp  PasswordLeakChecker.cpp  PasswordLeakChecker.h  PasswordRepository.h  PasswordTableModel.h  main.cpp  mainwindow.cpp  mainwindow.h
Kreshchenko20/: CMakeLists.txt  PasswordFilterProxyModel.h  PasswordLeakChecker.cpp  PasswordLeakChecker.h  PasswordRecord.h  PasswordRepository.cpp  PasswordTableModel.cpp  mainwindow.cpp  mainwindow.h
